# carla-wrapper

./: .gitignore  Dockerfile  entrpoint.sh  entrypoint.sh  justfile  pyproject.toml
.github/workflows/: docker-publish.yml
carla_wrapper/: server.py
proto/: carla.proto
