[project]
name = "carla-wrapper"
version = "0.1.0"
description = "A carla wrapper for SBSVS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "carla",
    "carla-api",
]

[tool.setuptools.packages.find]
include = ["carla_wrapper*"]
exclude = ["proto*"]

[tool.uv.sources]
carla-api = { git = "https://github.com/lolainta/carla-api.git" }
carla = { path = "../workspace/PythonAPI/carla/dist/carla-0.9.16-cp312-cp312-manylinux_2_31_x86_64.whl" }
